Drop: Fix spacing of diff icon in commit diff stats

--- a/source/features/github-bugs.css
+++ b/source/features/github-bugs.css
@@ -35,11 +35,6 @@
 	display: none !important;
 }
 
-/* Fix spacing of diff icon in commit diff stats #5429 */
-#toc .toc-diff-stats .octicon-file-diff {
-	margin-right: 4px !important;
-}
-
 /* Avoid horizontal scrollbars on Action logs in Safari #5152 */
 :root .CheckStep-line .CheckStep-line-content {
 	overflow: hidden;
